2.000_7 (yyyy-mm-dd)

    API / Behaviour Changes:
        - None.

    New Features:
        - None.

    Enhancements:
        - None.

    Bug Fixes:
        - None.

    Dependencies:
        - None.

    Packaging:
        - None.

2.000_6 (2019-11-12)

    Packaging:
        - Depend on Text::Diff explicitly for tests (closes RT#130969)
        - Add an 'anyevent-handle' feature that depends on
          AnyEvent::Handle.

2.000_5 (2019-11-11)

    API / Behaviour Changes:
        - Rename everything Bifcode2 back to Bifcode

    Enhancements:
        - Make diff-bifcode an optional "feature"

    Packaging:
        - Convert all tests to Test2::V0.

2.000_4 (2019-11-09)

    API / Behaviour Changes:
        - Rename Bifcode::V2 -> Bifcode2
        - Rename *_bifcode() functions to *_bifcode2()

    Enhancements:
        - Better test function names.
        - Better test for decoding of BIFCODE_REAL.
        - Proper AnyEvent support with tests

2.000_3 (2019-09-09)

    API / Behaviour Changes:
        - Re-introduce requirement for BIFCODE_DICT keys to be
          BIFCODE_UTF8 or BIFCODE_BYTES.

    New Features:
        - New BIFCODE_BIFCODE type for framing Bifcodes across a
          network connection.
        - Support AnyEvent::Handle integration.

    Enhancements:
        - Only load Carp when we actually need to croak

    Packaging:
        - Add some missing (bugtracker, repo) META data.

2.000_2 (2019-09-08)

    API / Behaviour Changes:
        - Use ":" to separate hash keys from values.
        - Allow hash keys to be of any type.

    Enhancements:
        - Inflate numbers as Perl IV and NV values.
        - Better automatic UTF8/BYTES detection.

2.000_1 (2019-09-02)

    API / Behaviour Changes:
        - Implements bifcode version 2, incompatible with version 1.

1.002 (2018-09-23)

    Packaging:
        - Remove ".readme_from" file from distribution

1.001 (2018-09-21)

    Packaging: